2007-11-06  Marcus D. Hanwell <marcus@cryos.org>
	* avogadro/libavogadro/src/engines/ribbonengine.*: Added ability to
	set the ribbon radius, also tried to add transparency - not working
	for me here.

	* libavogadro/src/glpainter.cpp: Added some extra calculations so that
	the tube shouldn't be flattened and also has a defined radius.

2007-11-05  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/glpainter.cpp: Now filled with NURBS goodness.
	Still needs quite a bit of tuning and testing but visually improved.
  
	* libavogadro/src/engines/ribbonengine.cpp: Modifications to work
	with the new GLPainter.

2007-11-02  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/glwidget.cpp: Updated the setMolecule function to 
	call setPrimitives for each engine at the end of molecule loading,
	should make our molecule loading more efficient.
  
	* libavogadro/src/engines/ribbonengine.*: Reimplemented the
	setPrimitives function due to changes in molecule loading.

2007-11-01  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/engines/labelengine.cpp,
	libavogadro/src/engines/labelsettingswidget.ui: Updated the label
	engineto label atoms by residue name and number and bonds by their
	order. Feature request 1820686 and 1824338. Also added partial charge
	labelling for atoms, feature request 1824337.

2007-10-31  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/engines/ribbonengine.*: Improvements to the ribbon
	code so that it caches the chain and updates it if the molecule is
	changed.

2007-10-24  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/engines/ribbonengine.cpp: Improve the ribbon engine
	to render multiple chains correctly and not crash when there is no
	chain.

2007-10-24  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/painter.h, libavogadro/src/glpainter.h,
	libavogadro/src/povpainter.h: Modified the drawSpline signature to use
	QVector and take a radius.
